--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -87,7 +87,7 @@ jobs:
         run: |
           cd /home/runner/work/build_azerothcore/build_azerothcore/azerothcore/build/azerothcore/build/install/
           # 修正打包路径（原路径存在重复build目录，简化路径）
-          tar -czvf "acore-${{ steps.ts.outputs.utc }}.tar.gz" \
+          sudo tar -czvf "acore-${{ steps.ts.outputs.utc }}.tar.gz" \
             --exclude="./.git" \
             --exclude="./node_modules" \
             --exclude="./dist" \
