--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -109,5 +109,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: azerothcore-wotlk-build
-          path: ${{ github.workspace }}\azerothcore-build.zip
+          path: ${{ github.workspace }}\install\azerothcore-build.zip
           retention-days: 7
