--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -89,9 +89,7 @@ jobs:
           # 修正打包路径（原路径存在重复build目录，简化路径）
           sudo tar -czvf "acore-${{ steps.ts.outputs.utc }}.tar.gz" \
             --exclude="./.git" \
-            --exclude="./node_modules" \
-            --exclude="./dist" \
-            --exclude="./tmp" \
+            --exclude="./include" \
             ./
           # 使用环境文件方式设置输出（替代set-output）
           echo "name=acore-${{ steps.ts.outputs.utc }}.tar.gz" >> "$GITHUB_OUTPUT"
