--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -84,10 +84,12 @@ jobs:
       - name: 打包文件
         id: package
         run: |
-          cd /home/runner/work/build_azerothcore/build_azerothcore/azerothcore/build/azerothcore/build/
-          sudo tar -czvf "acore-${{ steps.ts.outputs.utc }}.tar.gz" ./
-          # 使用环境文件方式设置输出（替代set-output）
-          echo "name=acore-${{ steps.ts.outputs.utc }}.tar.gz" >> "$GITHUB_OUTPUT"
+         # 切换到安装目录的父目录，确保打包路径正确
+         cd "${{ env.BUILD_DIR }}"
+         # 打包安装目录（稳定文件），而非整个构建目录
+         tar -czvf "acore-${{ steps.ts.outputs.utc }}.tar.gz" ./install/
+         # 输出打包文件名
+         echo "name=acore-${{ steps.ts.outputs.utc }}.tar.gz" >> "$GITHUB_OUTPUT"
 
       - name: 创建Release并上传
         # 使用维护中的release-action替代官方旧版action，解决set-output警告
@@ -104,10 +106,10 @@ jobs:
           token: ${{ secrets.BUILD_AZEROTHCORE }}
           replacesArtifacts: true
 
-      - name: 保留最新1个Release
+      - name: 保留最新2个Release
         uses: dev-drprasad/delete-older-releases@v0.3.4
         with:
-          keep_latest: 1
+          keep_latest: 2
           delete_tags: true
         env:
           GITHUB_TOKEN: ${{ secrets.BUILD_AZEROTHCORE }}
