--- a/.github/workflows/Playerbots_Linux.yml
+++ b/.github/workflows/Playerbots_Linux.yml
@@ -1,4 +1,4 @@
-name: Build AzerothCore Playerbots
+name: Playerbots Linux X86-64
 
 on:
   workflow_dispatch:
@@ -85,7 +85,8 @@ jobs:
       - name: 打包文件
         id: package
         run: |
-          tar -czvf "acore-${{ steps.ts.outputs.utc }}.tar.gz" /home/runner/work/build_azerothcore/build_azerothcore/azerothcore/build/azerothcore/build/install/
+          cd /home/runner/work/build_azerothcore/build_azerothcore/azerothcore/build/azerothcore/build/
+          tar -czvf "acore-${{ steps.ts.outputs.utc }}.tar.gz" ./
           echo "name=acore-${{ steps.ts.outputs.utc }}.tar.gz" >> $GITHUB_OUTPUT
           
       - name: 创建Release
@@ -113,10 +114,10 @@ jobs:
           asset_content_type: application/gzip
           path: ${{ steps.package.outputs.name }}
 
-      - name: 保留最新2个Release
+      - name: 保留最新3个Release
         uses: dev-drprasad/delete-older-releases@v0.3.4
         with:
-          keep_latest: 2
+          keep_latest: 3
           delete_tags: true
         env:
           GITHUB_TOKEN: ${{ secrets.BUILD_AZEROTHCORE }}
