--- a/.github/workflows/Azerothcore-Linux_x64.yml
+++ b/.github/workflows/Azerothcore-Linux_x64.yml
@@ -1,4 +1,4 @@
-name: Build azerothcore-wotlk
+name: Azerothcore-Linux_x64
 on:
   workflow_dispatch:
   schedule:
@@ -33,15 +33,17 @@ jobs:
             libbz2-dev libreadline-dev libncurses-dev \
             libboost-all-dev libcurl4-openssl-dev
           sudo apt clean
+          
       - name: 生成时间
         id: ts
         run: |
           echo "utc=$(date -u +%Y%m%d%H%M%S)" >> $GITHUB_OUTPUT
-          echo "sh=$(TZ='Asia/Shanghai' date +%Y%m%d%H%M%S)" >> $GITHUB_OUTPUT
+          
       - name: 克隆仓库
         run: |
           git clone --branch "${{ env.ACORE_BRANCH }}" "${{ env.ACORE_REPO }}" "${{ env.ROOT_DIR }}"
           cd "${{ env.ROOT_DIR }}" && git submodule update --init --recursive
+          
       - name: 拉取模块
         id: modules
         run: |
@@ -57,7 +59,7 @@ jobs:
               success+=("$name（$branch）")
             else
               failure+=("$name（$branch）")
-              echo "⚠️ 模块 $name 克隆失败，将继续构建"
+              echo "模块 $name 克隆失败，将继续构建"
             fi
           done <<< "${{ env.MODULES_INPUT }}"
           echo "success=$(IFS=';'; echo "${success[*]}")" >> $GITHUB_OUTPUT
@@ -81,7 +83,8 @@ jobs:
         id: package
         run: |
           # 打包该路径下的所有文件（保留目录结构）
-          tar -czvf "acore-${{ steps.ts.outputs.utc }}.tar.gz" /home/runner/work/build_azerothcore/build_azerothcore/azerothcore/build/azerothcore/build/install/
+          cd  /home/runner/work/build_azerothcore/build_azerothcore/azerothcore/build/azerothcore/build/
+          tar -czvf "acore-${{ steps.ts.outputs.utc }}.tar.gz" ./
           echo "name=acore-${{ steps.ts.outputs.utc }}.tar.gz" >> $GITHUB_OUTPUT
 
       - name: 创建Release
@@ -91,9 +94,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.BUILD_AZEROTHCORE }}
         with:
           tag_name: "Azerothcore-Wotlk_${{ steps.ts.outputs.date }}"
-          release_name: "Auto Build Azerothcore-Wotlk ${{ steps.ts.outputs.sh }}"
+          release_name: "Azerothcore-Wotlk_${{  steps.ts.outputs.date  }}"
           body: |
-            ### Auto Build Azerothcore-Wotlk
+            ### Azerothcore-Wotlk
             - 核心分支：${{ env.ACORE_BRANCH }}
             - 成功模块：${{ steps.modules.outputs.success }}
             - 失败模块：${{ steps.modules.outputs.failure || '无' }}
@@ -107,12 +110,11 @@ jobs:
           asset_path: ./${{ steps.package.outputs.name }}
           asset_name: ${{ steps.package.outputs.name }}
           asset_content_type: application/gzip
-          path: ${{ steps.package.outputs.name }}
 
-      - name: 保留最新2个Release
+      - name: 保留最新3个Release
         uses: dev-drprasad/delete-older-releases@v0.3.4
         with:
-          keep_latest: 2
+          keep_latest: 3
           delete_tags: true
         env:
           GITHUB_TOKEN: ${{ secrets.BUILD_AZEROTHCORE }}
