--- a/.github/workflows/Playerbots-Linux_x64.yml
+++ b/.github/workflows/Playerbots-Linux_x64.yml
@@ -85,38 +85,24 @@ jobs:
         id: package
         run: |
           cd /home/runner/work/build_azerothcore/build_azerothcore/azerothcore/build/azerothcore/build/
-          tar -czvf "acore-${{ steps.ts.outputs.utc }}.tar.gz" ./
+          tar -czvf "acore-${{ steps.ts.outputs.utc }}.tar.gz" ./install/
           echo "name=acore-${{ steps.ts.outputs.utc }}.tar.gz" >> $GITHUB_OUTPUT
           
-      - name: 创建Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.BUILD_AZEROTHCORE }}
+      - name: 创建Release并上传资产
+        uses: ncipollo/release-action@v1
         with:
-          tag_name: AzerothCore-Playerbots_${{ steps.ts.outputs.date }}
-          release_name: AzerothCore-Playerbots_${{ steps.ts.outputs.date }} 
-          body: |
-            ### AzerothCore Playerbots Linux x64
-            - 核心分支：${{ env.ACORE_BRANCH }}
-            - 成功模块：${{ steps.modules.outputs.success }}
-            - 失败模块：${{ steps.modules.outputs.failure || '无' }}
-
-      - name: 上传Release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.BUILD_AZEROTHCORE }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./${{ steps.package.outputs.name }}
-          asset_name: ${{ steps.package.outputs.name }}
-          asset_content_type: application/gzip
-          path: ${{ steps.package.outputs.name }}
+         tag: "AzerothCore-Playerbots_${{ steps.ts.outputs.date }}"
+         name: "AzerothCore-Playerbots_${{ steps.ts.outputs.date }}"
+         body: |
+              ### AzerothCore Playerbots Linux x64
+        artifacts: "./${{ steps.package.outputs.name }}"
+        replaceArtifacts: true
+        token: ${{ secrets.BUILD_AZEROTHCORE }}
 
       - name: 保留最新3个Release
         uses: dev-drprasad/delete-older-releases@v0.3.4
-        with:
-          keep_latest: 3
-          delete_tags: true
+         with:
+         keep_latest: 3
+        delete_tags: true
         env:
-          GITHUB_TOKEN: ${{ secrets.BUILD_AZEROTHCORE }}
+         GITHUB_TOKEN: ${{ secrets.BUILD_AZEROTHCORE }}
