--- a/.github/workflows/Azerothcore-Linux_x64.yml
+++ b/.github/workflows/Azerothcore-Linux_x64.yml
@@ -84,32 +84,19 @@ jobs:
         run: |
           # 打包该路径下的所有文件（保留目录结构）
           cd  /home/runner/work/build_azerothcore/build_azerothcore/azerothcore/build/azerothcore/build/
-          tar -czvf "acore-${{ steps.ts.outputs.utc }}.tar.gz" ./
+          tar -czvf "acore-${{ steps.ts.outputs.utc }}.tar.gz" ./install/
           echo "name=acore-${{ steps.ts.outputs.utc }}.tar.gz" >> $GITHUB_OUTPUT
 
-      - name: 创建Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.BUILD_AZEROTHCORE }}
+      - name: 创建 Release 并上传资产
+        uses: ncipollo/release-action@v1
         with:
-          tag_name: "Azerothcore-Wotlk_${{ steps.ts.outputs.date }}"
-          release_name: "Azerothcore-Wotlk_${{  steps.ts.outputs.date  }}"
-          body: |
-            ### Azerothcore-Wotlk
-            - 核心分支：${{ env.ACORE_BRANCH }}
-            - 成功模块：${{ steps.modules.outputs.success }}
-            - 失败模块：${{ steps.modules.outputs.failure || '无' }}
-
-      - name: 上传Release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.BUILD_AZEROTHCORE }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./${{ steps.package.outputs.name }}
-          asset_name: ${{ steps.package.outputs.name }}
-          asset_content_type: application/gzip
+         tag: "Azerothcore-Linux_x64_${{ steps.ts.outputs.date }}"
+         name: "Azerothcore-Linux_x64_${{ steps.ts.outputs.date }}"
+         body: |
+               ### Azerothcore-Linux_x64
+         artifacts: "./${{ steps.package.outputs.name }}" 
+         artifactContentType: "application/gzip"
+         token: ${{ secrets.BUILD_AZEROTHCORE }}
 
       - name: 保留最新3个Release
         uses: dev-drprasad/delete-older-releases@v0.3.4
@@ -117,4 +104,4 @@ jobs:
           keep_latest: 3
           delete_tags: true
         env:
-          GITHUB_TOKEN: ${{ secrets.BUILD_AZEROTHCORE }}
+         GITHUB_TOKEN: ${{ secrets.BUILD_AZEROTHCORE }}
