--- a/.github/workflows/Azerothcore-Linux_x64.yml
+++ b/.github/workflows/Azerothcore-Linux_x64.yml
@@ -81,7 +81,7 @@ jobs:
         id: package
         run: |
           cd /home/runner/work/build_azerothcore/build_azerothcore/azerothcore/build/azerothcore/build/
-          sudo chmod -R 755 "/install"
+          sudo chmod -R 755 /install
           tar -czvf "acore-${{ steps.ts.outputs.utc }}.tar.gz" ./
           echo "name=acore-${{ steps.ts.outputs.utc }}.tar.gz" >> $GITHUB_OUTPUT
 
