--- a/.github/workflows/Azerothcore-Linux_x64.yml
+++ b/.github/workflows/Azerothcore-Linux_x64.yml
@@ -74,12 +74,18 @@ jobs:
             -DMODULES=static
           make -j$(nproc) && make install
           
-      - name: 打包文件
+      - name: 复制文件到Release目录并打包
         id: package
         run: |
-           tar -czvf "acore-${{ steps.ts.outputs.utc }}.tar.gz" /home/runner/work/build_azerothcore/build_azerothcore/azerothcore/build/azerothcore/build/install
-           echo "name=acore-${{ steps.ts.outputs.utc }}.tar.gz" >> $GITHUB_OUTPUT
-
+          # 创建Release目录（注意：GitHub Actions中/home/runner是用户目录，直接用/home可能权限不足，建议用/home/runner/Release）
+          mkdir -p /home/runner/Release
+          # 复制安装目录的所有文件到Release目录
+          cp -r "${{ env.INSTALL_DIR }}"/* /home/runner/Release/
+          # 打包Release目录（使用绝对路径确保正确）
+          tar -czvf "acore-${{ steps.ts.outputs.utc }}.tar.gz" -C /home/runner Release
+          # 输出打包文件名
+          echo "name=acore-${{ steps.ts.outputs.utc }}.tar.gz" >> $GITHUB_OUTPUT
+          
       - name: 创建 Release 并上传资产
         uses: ncipollo/release-action@v1
         with:
